--- a/index.html
+++ b/index.html
@@ -8,9 +8,74 @@
     <link rel="icon" type="image/png" href="./assets/logo1.png">
 
     <link href="./assets/style.css" rel="stylesheet">
+
+    <script src="./assets/index.js" defer></script>
+    <script src="./assets/funnyfadein.js" defer></script>
   </head>
 
   <body>
-    <h1>projectsbyg1.ga</h1>
+    <div id="navbar">
+      test
+    </div>
+    <br>
+    <div class="fadein">
+      <h1>projectsby<span style="color: var(--accent);">g1<span style="color: var(--text-shadow);">.</span>ga</span></h1>
+      <h2 id="motd">oh no our motd its broken</h2>
+    </div>
+
+    testetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttstte
+    <br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte<br>
+    testetstetstetsttsttetestetstetstetsttstte
   </body>
 </html>
