frontend shit sucks and i hate fucking divs

--- a/index.html
+++ b/index.html
@@ -15,67 +15,24 @@
 
   <body>
     <div id="navbar">
-      test
+          <a href="index.html#header">Home</a>
+          <!-- <a>About</a> -->
+          <a>Contacts</a>
     </div>
+
     <br>
+
     <div class="fadein">
       <h1>projectsby<span style="color: var(--accent);">g1<span style="color: var(--text-shadow);">.</span>ga</span></h1>
       <h2 id="motd">oh no our motd its broken</h2>
     </div>
 
-    testetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttsttetestetstetstetsttstte
     <br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte<br>
-    testetstetstetsttsttetestetstetstetsttstte
+
+    <div class="container mid">
+      <div class="fadein">
+          <h2>Hi, I'm G1ga.</h2>
+      </div>
+    </div>
   </body>
 </html>
