--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="navbar">
           <a href="index.html#header">Home</a>
-          <!-- <a>About</a> -->
+          <a>Portfolio</a>
           <a>Contacts</a>
     </div>
 
@@ -27,12 +27,20 @@
       <h2 id="motd">oh no our motd its broken</h2>
     </div>
 
-    <br>
+    <br><hr><br> <!--yes there are better ways of doing this. no i do not give a fuck-->
+
+    <h2>About Me</h2>
 
     <div class="container mid">
       <div class="fadein">
-          <h2>Hi, I'm G1ga.</h2>
+          <span style="font-size: 30px;"><b>Hi, I'm G1ga.</b></span> <br>
+          Student interested in various parts of computer science
       </div>
     </div>
+
+    <br><hr><br>
+
+    <h2>Projects</h2>
+
   </body>
 </html>
