a lot of things

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script src="./assets/index.js" defer></script>
     <script src="./assets/funnyfadein.js" defer></script>
+
   </head>
 
   <body>
@@ -22,19 +23,26 @@
 
     <br>
 
-    <div class="fadein">
-      <h1>projectsby<span style="color: var(--accent);">g1<span style="color: var(--text-shadow);">.</span>ga</span></h1>
-      <h2 id="motd">oh no our motd its broken</h2>
+    <div id="particles-js">
+      <div class="fadein">
+        <h1>projectsby<span style="color: var(--accent);">g1<span style="color: var(--text-shadow);">.</span>ga</span></h1>
+        <h2 id="motd">oh no our motd its broken</h2>
+      </div>
     </div>
+    <script src="./assets/particles.js"></script>
+    <script src="./assets/loadparticles.js"></script>
 
     <br><hr><br> <!--yes there are better ways of doing this. no i do not give a fuck-->
 
-    <h2>About Me</h2>
+    <h2 id="about">About Me</h2>
 
     <div class="container mid">
       <div class="fadein">
           <span style="font-size: 30px;"><b>Hi, I'm G1ga.</b></span> <br>
-          Student interested in various parts of computer science
+          I'm a student interested in various areas of computer science. Still learning though since I'm bad :P<br>
+          I mostly make modifications for games and the like, but I sometimes dabble in other fields like ML and security-related projects.<br>
+          I code primarily in Python and JavaScript. Currently learning Java and Rust because yes<br>
+          Open to collab on stuff, though I may get too busy to respond after a while. Sorry!
       </div>
     </div>
 
