fix particles and add funny fade thing idk

--- a/index.html
+++ b/index.html
@@ -17,26 +17,29 @@
   <body>
     <div id="navbar">
           <a href="index.html#header">Home</a>
+          <a href="index.html#about">About</a>
           <a>Portfolio</a>
           <a>Contacts</a>
     </div>
 
+    <br><br>
+
+    <div class="headerwrapper">
+      <div id="particles-js"></div>
+      <script src="./assets/particles.js"></script>
+      <script src="./assets/loadparticles.js"></script>
+      <div class="retardedfuckingheaderthingbecauseidkhowtowebdev">
+        <div class="fadein">
+          <h1>projectsby<span style="color: var(--accent);">g1<span style="color: var(--text-shadow);">.</span>ga</span>    </h1>
+          <h2 id="motd">oh no our motd its broken</h2>
+        </div>
+      </div>
+      <div class="headertransition"></div>
+    </div>
+
     <br>
 
-    <div id="particles-js">
-      <div class="fadein">
-        <h1>projectsby<span style="color: var(--accent);">g1<span style="color: var(--text-shadow);">.</span>ga</span></h1>
-        <h2 id="motd">oh no our motd its broken</h2>
-      </div>
-    </div>
-    <script src="./assets/particles.js"></script>
-    <script src="./assets/loadparticles.js"></script>
-
-    <br><hr><br> <!--yes there are better ways of doing this. no i do not give a fuck-->
-
-    <h2 id="about">About Me</h2>
-
-    <div class="container mid">
+    <div class="container mid" id="about">
       <div class="fadein">
           <span style="font-size: 30px;"><b>Hi, I'm G1ga.</b></span> <br>
           I'm a student interested in various areas of computer science. Still learning though since I'm bad :P<br>
