how tf dp you image

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
   <body>
     <div id="navbar">
-          <a href="index.html#header">Home</a>
+          <a href="index.html">Home</a>
           <a href="index.html#about">About</a>
-          <a>Portfolio</a>
+          <a href="index.html#projects">Projects</a>
           <a>Contacts</a>
     </div>
 
@@ -45,13 +45,22 @@
           I'm a student interested in various areas of computer science. Still learning though since I'm bad :P<br>
           I mostly make modifications for games and the like, but I sometimes dabble in other fields like ML and security-related projects.<br>
           I code primarily in Python and JavaScript. Currently learning Java and Rust because yes<br>
-          Open to collab on stuff, though I may get too busy to respond after a while. Sorry!
+          Open to collab on stuff, contact me!
       </div>
     </div>
 
     <br><hr><br>
 
-    <h2>Projects</h2>
+    <h2 id="projects">Projects Showcase</h2><br>
+
+    <div class="container small">
+      <div class="fadein alignleft">
+        <span style="font-size: 30px;"><b>BioStacker</b></span> <br>
+        A custom item generator built for NookMileNadia/SynnCity's datapack BioStacker which supports both <code>/give</code> commands and loot tables.
+      </div>
+    </div>
+
+    <img src="assets/biostacker.png" style="transform: skewX(-5deg); width: 15%; height: 15%; box-shadow: 5px 5px 2.5px white;">
 
   </body>
 </html>
